<!--
  ~ Copyright (c) 2016 CA. All rights reserved.
  ~
  ~ This software may be modified and distributed under the terms
  ~ of the MIT license.  See the LICENSE file for details.
  ~
  -->

<resources>
    <string name="app_name">Session Unlock</string>
    <string name="protected_info">Log in to view protected information.</string>
    <string name="login_button_text">Log in</string>
    <string name="logout_button_text">Log out</string>
    <string name="invoke_session_locked">Session Locked, Cannot Invoke Protected API</string>
    <string name="session_locked">Session Locked!</string>
    <string name="session_unlocked">Session Unlocked!</string>
    <string name="wrong_password">wrongpassword</string>
    <string name="correct_user_name">admin</string>
    <string name="password">7layer</string>
    <string name="acc_name">My Account</string>
    <string name="authenticator_label">CA</string>
</resources>
