<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016 CA. All rights reserved.
  ~
  ~ This software may be modified and distributed under the terms
  ~ of the MIT license.  See the LICENSE file for details.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ca.masstoragesample.MainActivity">


    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="Title" />

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="Content"
        android:inputType="textMultiLine"
        android:minLines="5" />


    <Button
        android:id="@+id/saveButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:layout_below="@+id/content"
        android:text="Save" />


    <Button
        android:id="@+id/open"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:layout_alignParentRight="true"
        android:text="Open" />

</RelativeLayout>
