...
        android:background="#E6DCDC"

        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please Authenticate"
            android:textColor="#000"
            android:textSize="20dp"
            android:textStyle="bold" />
...
